[package]
name = "rs-builder-relayer-client"
version = "0.0.1"
edition = "2024"
authors = ["Polymarket Engineering <engineering@polymarket.com>"]
description = "Rust builder signing sdk"
license = "MIT"
repository = "https://github.com/Polymarket/rs-builder-relayer-client"

[dependencies]
# HTTP client
reqwest = { version = "0.12.26", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

# Ethereum and crypto
ethers = { version = "2.0", features = ["abigen", "legacy"] }
k256 = "0.13"
sha3 = "0.10"
ethabi = "18.0"
rlp = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenv = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
hex = "0.4"
rustc-hex = "2.1"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

# Polymarket packages
polymarket-client-sdk = {path = "../rs-clob-client"}
uuid = "1.19.0"
alloy = { version = "1.1.3", default-features = false, features = [
    "contract",
    "providers",
    "reqwest",
    "signer-aws",
    "signer-local",
    "dyn-abi",
    "serde",
    "signers",
    "sol-types", 
] }
alloy-primitives = "1.5.2"
alloy-rpc-types = "1.1.3"
alloy-signer-wallet = "0.0.0-reserved"
alloy-signer = "1.1.3"
sec = {version = "1.0.0", features = ["deserialize"] }


[dev-dependencies]
tokio-test = "0.4"

